crates/pina_cli/tests/snapshots/examples__counter_program.snap
---
source: crates/pina_cli/tests/examples.rs
expression: idl
---
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "counterProgram",
    "publicKey": "GJQcuWrT2f3f4KNuJcXhhwUa1ZQTYbxzzJ1hotzKu8hS",
    "version": "0.0.0",
    "accounts": [
      {
        "kind": "accountNode",
        "name": "counterState",
        "docs": [
          "On-chain counter state.",
          "",
          "The `#[account]` macro generates:",
          "- A discriminator field (`CounterAccountType::CounterState`) as the first",
          "byte.",
          "- A `CounterStateZc` storage view generated by `pinapod::PinaPod`.",
          "- `HasDiscriminator` linking this struct to",
          "`CounterAccountType::CounterState`.",
          "- `initialize` and `try_from_bytes` helpers for caller-owned storage.",
          "",
          "Layout (11 bytes total):",
          "```text",
          "| offset | size | field                     |",
          "|--------|------|---------------------------|",
          "| 0      | 1    | discriminator             |",
          "| 1      | 1    | migration version byte    |",
          "| 2      | 1    | bump                      |",
          "| 3      | 8    | count (little-endian u64) |",
          "```"
        ],
        "data": {
          "kind": "structTypeNode",
          "fields": [
            {
              "kind": "structFieldTypeNode",
              "name": "discriminator",
              "defaultValueStrategy": "omitted",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "defaultValue": {
                "kind": "numberValueNode",
                "number": 1
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "migrationVersion",
              "defaultValueStrategy": "omitted",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "defaultValue": {
                "kind": "numberValueNode",
                "number": 0
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "bump",
              "docs": [
                "The PDA bump seed, stored on-chain so we don't need to re-derive it."
              ],
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "count",
              "docs": [
                "The current counter value. The `PinaPod` view stores it using its",
                "alignment-one, little-endian representation."
              ],
              "type": {
                "kind": "numberTypeNode",
                "format": "u64",
                "endian": "le"
              }
            }
          ]
        },
        "pda": {
          "kind": "pdaLinkNode",
          "name": "counter"
        },
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          },
          {
            "kind": "constantDiscriminatorNode",
            "offset": 1,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 0
              }
            }
          }
        ]
      }
    ],
    "instructions": [
      {
        "kind": "instructionNode",
        "name": "initialize",
        "docs": [
          "Instruction data for `Initialize`.",
          "",
          "Contains the PDA bump seed so the client can pass a pre-computed bump",
          "(avoids the cost of `find_program_address` on-chain)."
        ],
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "authority",
            "isWritable": true,
            "isSigner": true,
            "isOptional": false,
            "docs": [
              "The wallet creating the counter. Pays for account creation and becomes",
              "the authority whose address seeds the PDA."
            ]
          },
          {
            "kind": "instructionAccountNode",
            "name": "counter",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false,
            "docs": [
              "The counter PDA account (must be empty — not yet created)."
            ],
            "defaultValue": {
              "kind": "pdaValueNode",
              "pda": {
                "kind": "pdaLinkNode",
                "name": "counter"
              },
              "seeds": [
                {
                  "kind": "pdaSeedValueNode",
                  "name": "authority",
                  "value": {
                    "kind": "accountValueNode",
                    "name": "authority"
                  }
                }
              ]
            }
          },
          {
            "kind": "instructionAccountNode",
            "name": "systemProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false,
            "docs": [
              "The system program, required for `CreateAccount` CPI."
            ],
            "defaultValue": {
              "kind": "publicKeyValueNode",
              "publicKey": "11111111111111111111111111111111"
            }
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 0
            }
          },
          {
            "kind": "instructionArgumentNode",
            "name": "bump",
            "docs": [
              "The PDA bump seed, computed off-chain."
            ],
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 0
              }
            }
          }
        ]
      },
      {
        "kind": "instructionNode",
        "name": "increment",
        "docs": [
          "Instruction data for `Increment`. No extra payload beyond the",
          "discriminator byte."
        ],
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "authority",
            "isWritable": false,
            "isSigner": true,
            "isOptional": false,
            "docs": [
              "The counter's authority. Must sign to prove ownership."
            ]
          },
          {
            "kind": "instructionAccountNode",
            "name": "counter",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false,
            "docs": [
              "The counter PDA account (must already exist and be writable)."
            ],
            "defaultValue": {
              "kind": "pdaValueNode",
              "pda": {
                "kind": "pdaLinkNode",
                "name": "counter"
              },
              "seeds": [
                {
                  "kind": "pdaSeedValueNode",
                  "name": "authority",
                  "value": {
                    "kind": "accountValueNode",
                    "name": "authority"
                  }
                }
              ]
            }
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 1
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          }
        ]
      }
    ],
    "pdas": [
      {
        "kind": "pdaNode",
        "name": "counter",
        "seeds": [
          {
            "kind": "constantPdaSeedNode",
            "type": {
              "kind": "stringTypeNode",
              "encoding": "utf8"
            },
            "value": {
              "kind": "stringValueNode",
              "string": "counter"
            }
          },
          {
            "kind": "variablePdaSeedNode",
            "name": "authority",
            "type": {
              "kind": "publicKeyTypeNode"
            }
          }
        ]
      }
    ]
  }
}
