crates/pina_cli/tests/snapshots/examples__escrow_program.snap
---
source: crates/pina_cli/tests/examples.rs
expression: idl
---
{
  "kind": "rootNode",
  "standard": "codama",
  "version": "1.8.0",
  "program": {
    "kind": "programNode",
    "name": "escrowProgram",
    "publicKey": "4ibrEMW5F6hKnkW4jVedswYv6H6VtwPN6ar6dvXDN1nT",
    "version": "0.0.0",
    "accounts": [
      {
        "kind": "accountNode",
        "name": "escrowState",
        "data": {
          "kind": "structTypeNode",
          "fields": [
            {
              "kind": "structFieldTypeNode",
              "name": "discriminator",
              "defaultValueStrategy": "omitted",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "defaultValue": {
                "kind": "numberValueNode",
                "number": 1
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "migrationVersion",
              "defaultValueStrategy": "omitted",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "defaultValue": {
                "kind": "numberValueNode",
                "number": 0
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "maker",
              "type": {
                "kind": "publicKeyTypeNode"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "mintA",
              "type": {
                "kind": "publicKeyTypeNode"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "mintB",
              "type": {
                "kind": "publicKeyTypeNode"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "amountA",
              "docs": [
                "The amount of token A that was sent by sender."
              ],
              "type": {
                "kind": "numberTypeNode",
                "format": "u64",
                "endian": "le"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "amountB",
              "docs": [
                "The amount of token B to be received by the recipient."
              ],
              "type": {
                "kind": "numberTypeNode",
                "format": "u64",
                "endian": "le"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "seed",
              "type": {
                "kind": "numberTypeNode",
                "format": "u64",
                "endian": "le"
              }
            },
            {
              "kind": "structFieldTypeNode",
              "name": "bump",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              }
            }
          ]
        },
        "pda": {
          "kind": "pdaLinkNode",
          "name": "escrow"
        },
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          },
          {
            "kind": "constantDiscriminatorNode",
            "offset": 1,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 0
              }
            }
          }
        ]
      }
    ],
    "instructions": [
      {
        "kind": "instructionNode",
        "name": "make",
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "maker",
            "isWritable": true,
            "isSigner": true,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "mintA",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "mintB",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "makerAtaA",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "escrow",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "vault",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "associatedTokenProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false,
            "defaultValue": {
              "kind": "publicKeyValueNode",
              "publicKey": "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"
            }
          },
          {
            "kind": "instructionAccountNode",
            "name": "systemProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false,
            "defaultValue": {
              "kind": "publicKeyValueNode",
              "publicKey": "11111111111111111111111111111111"
            }
          },
          {
            "kind": "instructionAccountNode",
            "name": "tokenProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 1
            }
          },
          {
            "kind": "instructionArgumentNode",
            "name": "seed",
            "docs": [
              "An ID of the transaction."
            ],
            "type": {
              "kind": "numberTypeNode",
              "format": "u64",
              "endian": "le"
            }
          },
          {
            "kind": "instructionArgumentNode",
            "name": "amountA",
            "docs": [
              "The amount of token A to be sent."
            ],
            "type": {
              "kind": "numberTypeNode",
              "format": "u64",
              "endian": "le"
            }
          },
          {
            "kind": "instructionArgumentNode",
            "name": "amountB",
            "docs": [
              "The amount of token B to be received."
            ],
            "type": {
              "kind": "numberTypeNode",
              "format": "u64",
              "endian": "le"
            }
          },
          {
            "kind": "instructionArgumentNode",
            "name": "bump",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 1
              }
            }
          }
        ]
      },
      {
        "kind": "instructionNode",
        "name": "take",
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "taker",
            "isWritable": true,
            "isSigner": true,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "mintA",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "mintB",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "takerAtaA",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "takerAtaB",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "maker",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "makerAtaB",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "escrow",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "vault",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "tokenProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "associatedTokenProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false,
            "defaultValue": {
              "kind": "publicKeyValueNode",
              "publicKey": "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"
            }
          },
          {
            "kind": "instructionAccountNode",
            "name": "systemProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false,
            "defaultValue": {
              "kind": "publicKeyValueNode",
              "publicKey": "11111111111111111111111111111111"
            }
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 2
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 2
              }
            }
          }
        ]
      },
      {
        "kind": "instructionNode",
        "name": "cancel",
        "accounts": [
          {
            "kind": "instructionAccountNode",
            "name": "maker",
            "isWritable": true,
            "isSigner": true,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "mintA",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "makerAtaA",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "escrow",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "vault",
            "isWritable": true,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "tokenProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false
          },
          {
            "kind": "instructionAccountNode",
            "name": "associatedTokenProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false,
            "defaultValue": {
              "kind": "publicKeyValueNode",
              "publicKey": "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"
            }
          },
          {
            "kind": "instructionAccountNode",
            "name": "systemProgram",
            "isWritable": false,
            "isSigner": false,
            "isOptional": false,
            "defaultValue": {
              "kind": "publicKeyValueNode",
              "publicKey": "11111111111111111111111111111111"
            }
          }
        ],
        "arguments": [
          {
            "kind": "instructionArgumentNode",
            "name": "discriminator",
            "defaultValueStrategy": "omitted",
            "type": {
              "kind": "numberTypeNode",
              "format": "u8",
              "endian": "le"
            },
            "defaultValue": {
              "kind": "numberValueNode",
              "number": 3
            }
          }
        ],
        "discriminators": [
          {
            "kind": "constantDiscriminatorNode",
            "offset": 0,
            "constant": {
              "kind": "constantValueNode",
              "type": {
                "kind": "numberTypeNode",
                "format": "u8",
                "endian": "le"
              },
              "value": {
                "kind": "numberValueNode",
                "number": 3
              }
            }
          }
        ]
      }
    ],
    "pdas": [
      {
        "kind": "pdaNode",
        "name": "escrow",
        "seeds": [
          {
            "kind": "constantPdaSeedNode",
            "type": {
              "kind": "stringTypeNode",
              "encoding": "utf8"
            },
            "value": {
              "kind": "stringValueNode",
              "string": "escrow"
            }
          },
          {
            "kind": "variablePdaSeedNode",
            "name": "maker",
            "type": {
              "kind": "publicKeyTypeNode"
            }
          },
          {
            "kind": "variablePdaSeedNode",
            "name": "seed",
            "type": {
              "kind": "numberTypeNode",
              "format": "u64",
              "endian": "le"
            }
          }
        ]
      }
    ],
    "errors": [
      {
        "kind": "errorNode",
        "name": "offerKeyMismatch",
        "code": 0,
        "message": "The token accounts do not match the offer's recorded mint and maker.",
        "docs": [
          "The token accounts do not match the offer's recorded mint and maker."
        ]
      },
      {
        "kind": "errorNode",
        "name": "tokenAccountMismatch",
        "code": 1,
        "message": "A supplied token account is not the one the offer references.",
        "docs": [
          "A supplied token account is not the one the offer references."
        ]
      },
      {
        "kind": "errorNode",
        "name": "emptyOffer",
        "code": 2,
        "message": "One side of the offer is zero, so the exchange gives value away.",
        "docs": [
          "One side of the offer is zero, so the exchange gives value away."
        ]
      }
    ]
  }
}
